# kohonen_visualizer

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/: original.cpp
include/: KohonenNetwork.hpp  KohonenVisualizer.hpp  MNISTLoader.hpp
save_models/: kohonen-2-epochs.txt  kohonen-x8-y8-z8-e3-lr0.05-r2.50-s3000-l3000.txt
src/: KohonenNetwork.cpp  KohonenVisualizer.cpp  MNISTLoader.cpp  camera.hpp  kohonen.hpp  main copy.cpp  main.cpp  test.cpp
